libs/modkit-odata-macros/tests/ui/fail/tuple_struct_not_supported.rs
use modkit_odata_macros::ODataSchema;

#[derive(ODataSchema)]
struct User(uuid::Uuid, String);

fn main() {}
